--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./icon.svg" type="image/svg+xml" />
-    <title>Router</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Routing</title>
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <style>
+      body {
+        font-size: 30px;
+      }
+    </style>
+    <base href="/">
+  </head>
+  <body>
+    <div class="menu">
+      <a href="/">Главная</a>
+      <a href="/about">About</a>
+      <a href="/info">Info</a>
+      <a href="/contacts/me">Contacts/Me</a>
+    </div>
+    <div id="app"></div>
+  </body>
 </html>
